force-app/main/default/objects/Product_Provisioning_Rule__mdt/Product_Provisioning_Rule__mdt.object-meta.xml
<CustomObject>
    <description
  >Per-product-family provisioning policy: does the family need a provisioning step, does it need AI Dispatch setup, what's the SLA, and who owns provisioning. Read by the Order trigger when deciding the Provisioning_Requested__e payload.</description>
    <label>Product Provisioning Rule</label>
    <pluralLabel>Product Provisioning Rules</pluralLabel>
</CustomObject>