force-app/main/default/objects/Product_Provisioning_Rule__mdt/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <description>Product family this provisioning policy applies to. Inline value set duplicating Northstar_Product_Family GVS (GVS not supported on MDT).</description>
    <inlineHelpText>Product family this rule applies to.</inlineHelpText>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Platform</fullName>
            </value>
            <value>
                <fullName>Analytics Add-On</fullName>
            </value>
            <value>
                <fullName>AI Dispatch Add-On</fullName>
            </value>
            <value>
                <fullName>Premium Support</fullName>
            </value>
            <value>
                <fullName>Implementation Services</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Sandbox / Test Environment</fullName>
            </value>
            <value>
                <fullName>Usage Overage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>