force-app/main/default/objects/Product_Provisioning_Rule__mdt/fields/Provisioning_Owner_Group__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_Owner_Group__c</fullName>
    <description
  >DeveloperName of the public group that owns provisioning for this family (typically Implementation Managers, or the Provisioning Exceptions queue for failure-routing). Used when raising a Provisioning Exception Case.</description>
    <inlineHelpText
  >DeveloperName of the public group owning provisioning.</inlineHelpText>
    <label>Provisioning Owner Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>