force-app/main/default/objects/Product_Provisioning_Rule__mdt/fields/Provisioning_SLA_Hours__c.field-meta.xml
<CustomField>
    <fullName>Provisioning_SLA_Hours__c</fullName>
    <description
  >SLA target for provisioning completion (hours). The async provisioning job uses it to set a Due time and to flag overdue Provisioning Exception Cases.</description>
    <inlineHelpText
  >Hours allowed to complete provisioning before escalation.</inlineHelpText>
    <label>Provisioning SLA (Hours)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>