force-app/main/default/objects/Product_Provisioning_Rule__mdt/fields/Requires_AI_Dispatch_Setup__c.field-meta.xml
<CustomField>
    <fullName>Requires_AI_Dispatch_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether this family needs AI Dispatch credential setup as part of provisioning. Stamped onto Order.Requires_AI_Dispatch_Setup__c by the Order trigger.</description>
    <inlineHelpText
  >Does this family need AI Dispatch credentials provisioned?</inlineHelpText>
    <label>Requires AI Dispatch Setup</label>
    <type>Checkbox</type>
</CustomField>