force-app/main/default/objects/Product_Provisioning_Rule__mdt/fields/Requires_Provisioning__c.field-meta.xml
<CustomField>
    <fullName>Requires_Provisioning__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether selling any product in this family triggers Provisioning_Requested__e. Functional duplicate of the formula on OrderItem.Requires_Provisioning__c but stored on the rule so policy can be revised without redeploying formulas.</description>
    <inlineHelpText>Does this family need a provisioning step?</inlineHelpText>
    <label>Requires Provisioning</label>
    <type>Checkbox</type>
</CustomField>